# alsa-gi

./: Makefile.am  README  autogen.sh  configure.ac  meson.build
doc/reference/: Makefile.am  alsa-gobject.xml  meson.build
sample/: control.py  ctl.py  rawmidi.py  run.sh  seq.py  sequencer.py  timer.py
src/: Makefile.am  meson.build
src/card/: Makefile.am  alsacard.c  alsacard.h  alsacard.map  card.c  card.h  context.c  context.h  meson.build
src/control/: Makefile.am  client.c  client.h  elemset.c  elemset.h
src/ctl/: Makefile.am  alsactl.map  alsactl_enum_types.h  alsactl_enums.c.template  alsactl_enums.h.template  client.c  client.h  client_elem.c  elem.c  elem.h  elem_bool.c  elem_bool.h  elem_byte.c  elem_byte.h  elem_enum.c  elem_enum.h  elem_iec60958.c  elem_iec60958.h  elem_int.c  elem_int.h  elemset.c  elemset_bool.c  elemset_bool.h  elemset_byte.c  elemset_byte.h  elemset_enum.c  elemset_enum.h  elemset_iec60958.c  elemset_iec60958.h  elemset_int.c  elemset_int.h  meson.build
src/rawmidi/: alsarawmidi.map  alsarawmidi_enum_types.h  alsarawmidi_enums.c.template  alsarawmidi_enums.h.template  meson.build
src/seq/: Makefile.am  alsaseq.c  alsaseq.map  alsaseq_enum_types.h  alsaseq_enums.c.template  alsaseq_enums.h.template  alsaseq_sigs_marshal.list  client.c  client.h  client_info.c  client_info.h  meson.build  port.c  port.h  port_info.c  port_info.h  seq.c  seq.h  system_info.c  system_info.h
src/timer/: Makefile.am  alsatimer.map  alsatimer_enum_types.h  alsatimer_enums.c.template  alsatimer_enums.h.template  alsatimer_sigs_marshal.list  client.c  client.h  meson.build  query.c  query.h
tests/: alsactl-client  alsactl-enums  alsarawmidi-enums  alsaseq-client  alsaseq-enums  alsaseq-port  alsatimer-client  alsatimer-enums  meson.build
